longhorn/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-route
  namespace: longhorn-system
spec:
  parentRefs:
  - name: longhorn-gateway
    namespace: longhorn-system
    sectionName: http
  - name: longhorn-gateway
    namespace: longhorn-system
    sectionName: https    
  hostnames:
    - "longhorn.coindefense.duckdns.org"    
  rules:
  - matches:
     - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: longhorn-gateway
  namespace: longhorn-system
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: wildcard-coindefense-duckdns-vdchc
        namespace: cert-manager
